# tra

./: .gitignore  Dockerfile  backup.py  classes.py  dummy.py  main.py  pyproject.toml  setting.py  tra_spider.py  view.py
.github/workflows/: build.yml
core/: classes.py  tra_spider.py  utils.py  view.py
