[project]
name = "tra"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jeff", email = "jeffpeng2012@gmail.com" }
]
dependencies = [
    "patchright>=1.49.1",
    "py-cord[speed]>=2.6.1",
]
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
