[project]
name = "tra"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jeff", email = "jeffpeng2012@gmail.com" }
]
dependencies = [
    "camoufox>=0.4.11",
    "py-cord[speed]==2.6.1",
    "recognizer==1.4",
]
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
